<resources>
    <string name="app_name">Cloud Gallery</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registerText"><u>Do not have an account? Click here to register</u></string>
    <string name="register">Register</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="uploadTime">Upload Time</string>
    <string name="updateTime">Update Time</string>
    <string name="description">Description</string>
    <string name="operation">Operations: </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_title">Are you sure that you want to delete this file?</string>
    <string name="edit_title">Edit file description:</string>
</resources>
