<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="100dp">

    <ImageView
        android:id="@+id/picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        app:srcCompat="@drawable/upload" />

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/uploadTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uploadTime" />

        <TextView
            android:id="@+id/updateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updateTime" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description" />
    </LinearLayout>

</LinearLayout>